DS-3885 by maikelkoopman: fix issue thread participants alignment

--- a/themes/socialbase/components/04-organisms/message/message.scss
+++ b/themes/socialbase/components/04-organisms/message/message.scss
@@ -74,6 +74,10 @@
   margin-bottom: 0.5rem;
 }
 
+.message__recipients {
+  align-items: center;
+}
+
 .message__back-btn {
   flex: 0 0 38px;
 }
